So the story begins...

--- a/index.html
+++ b/index.html
@@ -5,33 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Great+Vibes&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <script src="./assets/js/file.js"></script>
     <title>Once Upon a Hacktoberfest</title>
 </head>
 <body class="book">
-    <section id="book__section" class="book__section">
-        <div class="book__content">
+    <section class="book__section">
+        <div id="book__content" class="book__wrap">
             <h1 class="book__title"><b>Once Upon a Hacktoberfest</b></h1>
             <h2 class="book__chapter"><strong>Chapter 1 - The Giant and the Dwarf</strong></h2>
             <p class="book__text">
-                The day had dawned clear. Perhaps not as clear as the giant that unusually burst from the ground and launched its attack on the dwarven village.
-                <br>- Where are the stones, <i>ants</i>?<br>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum beatae molestiae totam provident nobis laudantium rem minus unde quibusdam reprehenderit et doloremque aliquam inventore perferendis aut deleniti, ab temporibus qui. Lorem ipsum dolor sit amet consectetur, adipisicing elit. At autem laborum mollitia. Expedita odit, molestias vel id cum aliquam magni magnam inventore recusandae, eligendi libero delectus, et laborum explicabo tempore.<br>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae quas iure consequatur inventore voluptatum voluptatem, facilis corporis eos. Eius voluptatem totam voluptate doloribus ipsum vitae. Corrupti libero earum voluptatum ipsam.<br>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae aliquam repellendus consequatur at reiciendis reprehenderit dicta illum inventore eaque cupiditate autem quis minima aliquid illo, explicabo doloremque! Totam, accusamus nobis!<br>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae quas iure consequatur inventore voluptatum voluptatem, facilis corporis eos. Eius voluptatem totam voluptate doloribus ipsum vitae. Corrupti libero earum voluptatum ipsam.<br>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae aliquam repellendus consequatur at reiciendis reprehenderit dicta illum inventore eaque cupiditate autem quis minima aliquid illo, explicabo doloremque! Totam, accusamus nobis!<br>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae quas iure consequatur inventore voluptatum voluptatem, facilis corporis eos. Eius voluptatem totam voluptate doloribus ipsum vitae. Corrupti libero earum voluptatum ipsam.<br>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae aliquam repellendus consequatur at reiciendis reprehenderit dicta illum inventore eaque cupiditate autem quis minima aliquid illo, explicabo doloremque! Totam, accusamus nobis!<br>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae quas iure consequatur inventore voluptatum voluptatem, facilis corporis eos. Eius voluptatem totam voluptate doloribus ipsum vitae. Corrupti libero earum voluptatum ipsam.<br>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae aliquam repellendus consequatur at reiciendis reprehenderit dicta illum inventore eaque cupiditate autem quis minima aliquid illo, explicabo doloremque! Totam, accusamus nobis!<br>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae quas iure consequatur inventore voluptatum voluptatem, facilis corporis eos. Eius voluptatem totam voluptate doloribus ipsum vitae. Corrupti libero earum voluptatum ipsam.<br>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae aliquam repellendus consequatur at reiciendis reprehenderit dicta illum inventore eaque cupiditate autem quis minima aliquid illo, explicabo doloremque! Totam, accusamus nobis!<br>
+                The day had dawned clear. Perhaps not as clear as the giant that unusually burst from the ground and launched its attack on the dwarven village.<br>
+                - Where are the stones? - roared the giant as he tore down the village roofs with the old trunk of a tree.<br> 
+                The dwarf soldiers promptly prepared the crossbows and fired at the giant, but it had no effect.
             </p>
         </div>  
         <button id="book__button" class="book__button">Download</button>
+        <div class="book__detail"></div>
     </section>
 </body>
     
