--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
             <p class="book__text">
                 The day had dawned clear. Perhaps not as clear as the giant that unusually burst from the ground and launched its attack on the dwarven village.<br>
                 - Where are the stones? - roared the giant as he tore down the village roofs with the old trunk of a tree.<br> 
-                The dwarf soldiers promptly prepared the crossbows and fired at the giant, but it had no effect.
+                The dwarf soldiers promptly prepared the crossbows and fired at the giant, but it had no effect.<br>
+                Eleonor, a member of the dwarf soldiers, run out of the florest to protect and save her lover Patrice, because she really don't care about the dwarven village. <br>
+                She already lost a lot of people, and now everything that she haves is her father and Patrice.<br>
+                Her father was a very important member of the dwarven village, but he is evil and has force Eleonor to work with the dwarf soldiers, and this has coust the life of the people that she loves including her mother.
+                Patrice is a fugitive, and is living in the florest, but only Eleonor knows her exacly location.
             </p>
         </div>  
         <button id="book__button" class="book__button">Download</button>
