--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
                 Her father was a very important member of the dwarven village, but he is evil and has force Eleonor to work with the dwarf soldiers, and this has coust the life of the people that she loves including her mother.
                 Patrice is a fugitive, and is living in the florest, but only Eleonor knows her exacly location.
             </p>
+            <p class="book__text">
+                Eleonor then runs off through the woods, carrying only his map and a small bottle of water. It was night when suddenly something terrible happened ...
+            </p>
         </div>  
         <button id="book__button" class="book__button">Download</button>
         <div class="book__detail"></div>
