fix the pull request of my friend

--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
                 She already lost a lot of people, and now everything that she haves is her father and Patrice.<br>
                 Her father was a very important member of the dwarven village, but he is evil and has force Eleonor to work with the dwarf soldiers, and this has coust the life of the people that she loves including her mother.
                 Patrice is a fugitive, and is living in the florest, but only Eleonor knows her exacly location.
+                <br>Eleonor then runs off through the woods, carrying only his map and a small bottle of water. It was night when suddenly something terrible happened: her father starts to follow her without she knows.
+                Eriel was very angry with that situation, his son was running away of that giant attack, this is unacceped.<br> 
+                - What the village will think about it?? - he thougs.
             </p>
             <p class="book__text">
-                Eleonor then runs off through the woods, carrying only his map and a small bottle of water. It was night when suddenly something terrible happened ...
             </p>
         </div>  
         <button id="book__button" class="book__button">Download</button>
