--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
             <p class="book__text">
                 Eleonor then runs off through the woods, carrying only his map and a small bottle of water. It was night when suddenly something terrible happened: her father starts to follow her without she knows.
                 Eriel was very angry with that situation, his son was running away of that giant attack, this is unacceped.<br> 
-                - What the village will think about it?? - he thougs.
+                - What the village will think about it?? - he thought.
+            </p>
+			<p class="book__text">
+                While her father runs through the woods with raging thoughts, Eleonor comes upon a lonely dim lit cottage with smoke coming out of its chimney. Unsure of who or what lies inside, she strolls around the back of the mysterious cottage when she hears footsteps creeking on the wooden floor.
+				Eleonor takes the opportunity to look through the small window and catches a glimpse of a bear rug that lies under a rocking chair and a round table. On this table was a white smoke-filled crystal ball with ruby red container holding it still. A hoot of an owl makes her jump of shock and crawl on the ground, leaving her thinking -I couldn't see who's inside-.
             </p>
         </div>
         <button id="book__button" class="book__button">Download</button>
