--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
                 - Where are the stones? - roared the giant as he tore down the village roofs with the old trunk of a tree. The dwarf soldiers promptly prepared the crossbows and fired at the giant, but it had no effect.
             </p>
             <p class="book__text">
-                Eleonor, a member of the dwarf soldiers, run out of the florest to protect and save her lover Patrice, because she really don't care about the dwarven village. She already lost a lot of people, and now everything that she haves is her father and Patrice.
+                Eleonor, a member of the dwarf soldiers, run out of the forest to protect and save her lover Patrice, because she really don't care about the dwarven village. She already lost a lot of people, and now everything that she haves is her father and Patrice.
             </p>
             <p class="book__text">
-                Her father was a very important member of the dwarven village, but he is evil and has force Eleonor to work with the dwarf soldiers, and this has coust the life of the people that she loves including her mother.
+                Her father was a very important member of the dwarven village, but he is evil and has force Eleonor to work with the dwarf soldiers, and this has cost the life of the people that she loves including her mother.
             </p>
             <p class="book__text">
-                Patrice is a fugitive, and is living in the florest, but only Eleonor knows her exacly location.
+                Patrice is a fugitive, and is living in the forest, but only Eleonor knows her exact location.
             </p>
             <p class="book__text">
-                Eleonor then runs off through the woods, carrying only his map and a small bottle of water. It was night when suddenly something terrible happened: her father starts to follow her without she knows.
-                Eriel was very angry with that situation, his son was running away of that giant attack, this is unacceped.<br> 
-                - What the village will think about it?? - he thougs.
+                Eleonor then runs off through the woods, carrying only her map and a small bottle of water. It was night when suddenly something terrible happened: her father starts to follow her without her knowing.
+                Eriel was very angry with that situation, his daughter was running away of that giant attack, this is unacceptable.<br> 
+                - What the village will think about it?? - he thinks.
             </p>
         </div>
         <button id="book__button" class="book__button">Download</button>
